@@ -1,7 +1,7 @@
 #
 # Gramps - a GTK+/GNOME based genealogy program
 #
-# Copyright (C) 2003-2005  Donald N. Allingham
+# Copyright (C) 2003-2006  Donald N. Allingham
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -47,33 +47,36 @@ import gtk.glade
 #
 #-------------------------------------------------------------------------
 import const
-import Utils
 import ListModel
 import DateHandler
+import ManagedWindow
 
 #-------------------------------------------------------------------------
 #
 # SelectEvent
 #
 #-------------------------------------------------------------------------
-class SelectEvent:
+class SelectEvent(ManagedWindow.ManagedWindow):
     """
     Selects an event from the list of available events
     """
 
-    def __init__(self, database, title, parent_window=None):
+    def __init__(self, dbstate, uistate, track, title):
         """
         Create an Event Selector, allowing the user to select on of the
         events in the event list.
         """
 
-        self.db = database
+        self.title = title
+        ManagedWindow.ManagedWindow.__init__(self, uistate, track, self)
+
+        self.db = dbstate.db
         self.glade = gtk.glade.XML(const.gladeFile, "select_person", "gramps")
-        self.top = self.glade.get_widget('select_person')
+        window = self.glade.get_widget('select_person')
         title_label = self.glade.get_widget('title')
         self.elist =  self.glade.get_widget('plist')
 
-        Utils.set_titles(self.top, title_label, title)
+        self.set_window(window, title_label, self.title)
 
         titles = [(_('Description'), 4, 250), (_('ID'), 1, 75),
                   (_('Type'), 2, 75), (_('Date'), 3, 150), ('', 4, 0) ] 
@@ -82,10 +85,10 @@ class SelectEvent:
         self.model = ListModel.ListModel(self.elist, titles)
 
         self.redraw()
-        self.top.show()
+        self.show()
 
-        if parent_window:
-            self.top.set_transient_for(parent_window)
+    def build_menu_names(self,obj):
+        return (self.title, None)
 
     def redraw(self):
         """
@@ -110,7 +113,7 @@ class SelectEvent:
         Runs te dialog, returning None if the event was not selected,
         or the event that was selected.
         """
-        val = self.top.run()
+        val = self.window.run()
 
         if val == gtk.RESPONSE_OK:
             store, node = self.model.get_selected()
@@ -120,8 +123,8 @@ class SelectEvent:
                 return_value = self.db.get_event_from_handle(handle)
             else:
                 return_value = None
-            self.top.destroy()
+            self.close()
 	    return return_value
         else:
-            self.top.destroy()
+            self.close()
             return None
